ACDS-279883 bug text-spacing -fixed

--- a/src/app/stylesheets/print.scss
+++ b/src/app/stylesheets/print.scss
@@ -377,3 +377,55 @@ title {
     filter: var(--svg-filter-dark) !important;
   }
 }
+
+.style-tag-added p {
+  margin-bottom: 0 !important;
+  font-size: 100% !important;
+  line-height: 1.5 !important;
+  letter-spacing: 0.12em !important;
+  word-spacing: 0.16em !important;
+}
+
+.style-tag-added .text {
+  font-size: 100% !important;
+  margin-bottom: 0 !important;
+  line-height: 1.5 !important;
+  letter-spacing: 0.12em !important;
+  word-spacing: 0.16em !important;
+}
+
+.style-tag-added .chart-container {
+  font-size: 100% !important;
+}
+
+.style-tag-added .table-container table td {
+  font-size: 100% !important;
+  margin-bottom: 0 !important;
+  line-height: 1.5 !important;
+  letter-spacing: 0.12em !important;
+  word-spacing: 0.16em !important;
+}
+
+.style-tag-added .imageDes span {
+  font-size: 100% !important;
+}
+
+.style-tag-added .imageDes {
+  height: auto !important;
+}
+
+.style-tag-added .node-container {
+  font-size: 100% !important;
+}
+
+.style-tag-added .option ul li {
+  font-size: 100% !important;
+}
+
+.style-tag-added .add-Stylus p {
+  font-size: 85% !important;
+}
+
+.style-tag-added .add-text-stylus {
+  font-size: 100% !important;
+}
